--- a/styles/scss/pages/search.scss
+++ b/styles/scss/pages/search.scss
@@ -18,6 +18,7 @@ header {
             border-radius: 10px;
             border: none;
             padding-left: 13px;
+            margin-left: 10px;
 
             &:focus {
                 outline: none;
@@ -25,6 +26,7 @@ header {
         }
 
         img.code-icon {
+            margin: 10px;
             width: 20px;
         }
     }
@@ -33,6 +35,7 @@ header {
         @include simple-flex(space-around, center, row);
 
         button {
+            @include simple-flex(space-around, center, row);
             height: 32px;
             background: #FFFFFF;
             border: 1px solid rgba(60, 60, 67, 0.18);
@@ -41,7 +44,7 @@ header {
             padding: 0 11px;
             margin-top: 9px;
             font-family: arial;
-            font-weight: 500;
+            font-weight: 600;
 
             &:focus {
                 outline: none;
@@ -49,6 +52,7 @@ header {
         }
 
         img.categories-icon {
+            margin-right: 3.5px;
             width: 12px;
         }
     }
@@ -56,4 +60,16 @@ header {
 }
 
 main {
+    section.feed-container {
+
+        @include simple-flex(center, center, row);
+        flex-wrap: wrap;
+        margin: 0;
+        max-width: 100vw;
+
+        img.feed-img {
+            margin: 0 0.5px;
+        }
+
+    }
 }
