fix links and done like page

--- a/styles/scss/pages/likes.scss
+++ b/styles/scss/pages/likes.scss
@@ -1,12 +1,19 @@
 @import "../styles.scss";
 
+html,
+body {
+    font-family: Arial;
+    color: $text-color;
+    background-color: $background-primary;
+    overflow-x: hidden;
+}
+
 header {
     width: 100%;
-    padding: 10px 0 6px;
+    padding-top: 10px;
     background-color: $background-secondary;
     position: sticky;
     top: 0;
-    border-bottom: 1px solid #e2e2e2;
 
     .like-header {
         @include simple-flex(space-around, center, row);
@@ -23,26 +30,35 @@ header {
     .follow-req {
         @include simple-flex(flex-start, center, row);
         width: 100%;
-        margin-left: 16px;
+        padding-left: 16px;
         height: 48px;
         font-size: 15px;
+        background: $background-primary;
+        border-bottom: 1px solid #e2e2e2;
     }
 }
 
 main {
-    section {
+    .container {
         max-width: 100%;
+        margin: 0 16px;
 
-        div.like-container {
-            border-bottom: 1px solid #e2e2e2;
-        }
-
-        div.new-like {
+        .like-box {
             width: 100%;
+            @include simple-flex(center, left, column);
+            border-bottom: 1px solid #e2e2e2;
 
-            span {
+
+            .title-box {
+                margin: 13px 0;
+                font-weight: 600;
                 font-size: 15px;
-                margin: 13px 16px;
+                line-height: 20px;
+                letter-spacing: -0.3px;
+            }
+
+            .title-like {
+                font-size: 15px;
                 font-weight: 700;
             }
 
@@ -50,25 +66,83 @@ main {
                 @include simple-flex(space-between, center, row);
                 font-size: 13px;
 
-                div.name-user {
-                    font-weight: 700;
-                }
+                .like {
 
-
-                div.like {
                     img.userlike-img {
                         border-radius: 50%;
-                        margin: 8px 8px 8px 16px;
+                        margin: 8px 0;
                         height: 44px;
                         width: 44px;
                     }
 
+                    div.text-box {
+                        @include simple-flex(flex-start, center, row);
+                        flex-wrap: wrap;
+                        max-width: 200px;
+                        margin-left: 12px;
+                    }
+
+                    div.name-user {
+                        font-weight: 700;
+                        font-size: 13px;
+                        margin-right: 2px;
+                    }
+
+                    div.name-user2 {
+                        font-weight: 700;
+                        font-size: 13px;
+                        margin-left: 2px;
+                    }
                 }
             }
 
             img {
-                margin: 8px 16px 8px 8px;
+                margin: 8px 0;
+            }
+
+            div.time-like {
+                color: #e2e2e2;
             }
         }
     }
+
+
+    .week-container {
+        @include simple-flex(center, center, column);
+        flex-wrap: wrap;
+        max-width: 100vw;
+
+        div {
+            @include simple-flex(space-between center, row);
+        }
+
+        button {
+            width: 90px;
+            height: 28px;
+            border: 1px solid rgba(60, 60, 67, 0.18);
+            box-sizing: border-box;
+            border-radius: 4px;
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 17px;
+            text-align: center;
+            letter-spacing: -0.2px;
+
+            &:focus {
+                outline: none;
+            }
+        }
+
+        .btn-msg {
+            background: #FFFFFF;
+            color: #262626;
+        }
+
+        .btn-follow {
+            background-color: $highlight-color;
+            color: white;
+            border: none;
+        }
+    }
+
 }
