--- a/styles/css/pages/likes.css
+++ b/styles/css/pages/likes.css
@@ -43,13 +43,20 @@ body {
   width: 22px;
 }
 
+html,
+body {
+  font-family: Arial;
+  color: #262626;
+  background-color: #fafafa;
+  overflow-x: hidden;
+}
+
 header {
   width: 100%;
-  padding: 10px 0 6px;
+  padding-top: 10px;
   background-color: #f2f2f2;
   position: sticky;
   top: 0;
-  border-bottom: 1px solid #e2e2e2;
 }
 header .like-header {
   display: flex;
@@ -72,43 +79,111 @@ header .follow-req {
   align-items: center;
   flex-direction: row;
   width: 100%;
-  margin-left: 16px;
+  padding-left: 16px;
   height: 48px;
   font-size: 15px;
-}
-
-main section {
-  max-width: 100%;
-}
-main section div.like-container {
+  background: #fafafa;
   border-bottom: 1px solid #e2e2e2;
 }
-main section div.new-like {
-  width: 100%;
+
+main .container {
+  max-width: 100%;
+  margin: 0 16px;
 }
-main section div.new-like span {
+main .container .like-box {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: left;
+  flex-direction: column;
+  border-bottom: 1px solid #e2e2e2;
+}
+main .container .like-box .title-box {
+  margin: 13px 0;
+  font-weight: 600;
   font-size: 15px;
-  margin: 13px 16px;
+  line-height: 20px;
+  letter-spacing: -0.3px;
+}
+main .container .like-box .title-like {
+  font-size: 15px;
   font-weight: 700;
 }
-main section div.new-like div {
+main .container .like-box div {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
   font-size: 13px;
 }
-main section div.new-like div div.name-user {
-  font-weight: 700;
-}
-main section div.new-like div div.like img.userlike-img {
+main .container .like-box div .like img.userlike-img {
   border-radius: 50%;
-  margin: 8px 8px 8px 16px;
+  margin: 8px 0;
   height: 44px;
   width: 44px;
 }
-main section div.new-like img {
-  margin: 8px 16px 8px 8px;
+main .container .like-box div .like div.text-box {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 200px;
+  margin-left: 12px;
+}
+main .container .like-box div .like div.name-user {
+  font-weight: 700;
+  font-size: 13px;
+  margin-right: 2px;
+}
+main .container .like-box div .like div.name-user2 {
+  font-weight: 700;
+  font-size: 13px;
+  margin-left: 2px;
+}
+main .container .like-box img {
+  margin: 8px 0;
+}
+main .container .like-box div.time-like {
+  color: #e2e2e2;
+}
+main .week-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  max-width: 100vw;
+}
+main .week-container div {
+  display: flex;
+  justify-content: space-between center;
+  align-items: row;
+  flex-direction: row;
+}
+main .week-container button {
+  width: 90px;
+  height: 28px;
+  border: 1px solid rgba(60, 60, 67, 0.18);
+  box-sizing: border-box;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  letter-spacing: -0.2px;
+}
+main .week-container button:focus {
+  outline: none;
+}
+main .week-container .btn-msg {
+  background: #FFFFFF;
+  color: #262626;
+}
+main .week-container .btn-follow {
+  background-color: #3797ef;
+  color: white;
+  border: none;
 }
 
 /*# sourceMappingURL=likes.css.map */
